- Fixed Top Bar Icon being too big

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body {
   background-color: var(--lite-blue)
 }
 
-.top-bar-icon {
+.topbar-icon {
   width: 140px;
   height: auto;
   margin-right: 330px;
